--- a/Day 1 - Portfolio Page/src/index.html
+++ b/Day 1 - Portfolio Page/src/index.html
@@ -10,7 +10,9 @@
   <body>
     <header class="container">
       <nav id="navbar">
-        <img src="./imgs/logo.png" alt="logo" />
+        <a href="#">
+          <img src="./imgs/logo.png" alt="logo" />
+        </a>
         <div>
           <ul>
             <li><a href="#">Services</a></li>
@@ -43,5 +45,65 @@
         </div>
       </div>
     </header>
+    <main class="container">
+      <section>
+        <p id="headline">From beginning ideas to individual integrity, rich identity from the line <span> on the paper to final projects </span></p>
+        <div id="services">
+          <div id="cover">
+            <img src="./imgs/image 11.jpg" alt="" />
+          </div>
+          <div class="services-list">
+            <ul>
+              <li>
+                <p class="services-heading">Web design</p>
+                <p class="services-body">Provide our customers with optimized user-friendly experience to increase the efficiency of digital products.</p>
+                <a class="services-btn" href="#">
+                  See Works <span><img src="./imgs/arrow-right 1.png" alt="" /></span>
+                </a>
+              </li>
+              <li>
+                <p class="services-heading">Web design</p>
+                <p class="services-body">Provide our customers with optimized user-friendly experience to increase the efficiency of digital products.</p>
+                <a class="services-btn" href="#">
+                  See Works <span><img src="./imgs/arrow-right 1.png" alt="" /></span>
+                </a>
+              </li>
+              <li>
+                <p class="services-heading">Web design</p>
+                <p class="services-body">Provide our customers with optimized user-friendly experience to increase the efficiency of digital products.</p>
+                <a class="services-btn" href="#">
+                  See Works <span><img src="./imgs/arrow-right 1.png" alt="" /></span>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="services-list">
+            <ul>
+              <li>
+                <p class="services-heading">Web design</p>
+                <p class="services-body">Provide our customers with optimized user-friendly experience to increase the efficiency of digital products.</p>
+                <a class="services-btn" href="#">
+                  See Works <span><img src="./imgs/arrow-right 1.png" alt="" /></span>
+                </a>
+              </li>
+              <li>
+                <p class="services-heading">Web design</p>
+                <p class="services-body">Provide our customers with optimized user-friendly experience to increase the efficiency of digital products.</p>
+                <a class="services-btn" href="#">
+                  See Works <span><img src="./imgs/arrow-right 1.png" alt="" /></span>
+                </a>
+              </li>
+              <li>
+                <p class="services-heading">Web design</p>
+                <p class="services-body">Provide our customers with optimized user-friendly experience to increase the efficiency of digital products.</p>
+                <a class="services-btn" href="#">
+                  See Works <span><img src="./imgs/arrow-right 1.png" alt="" /></span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
