--- a/1 Portfolio Page/src/index.html
+++ b/1 Portfolio Page/src/index.html
@@ -57,53 +57,61 @@
               <li>
                 <p class="services-heading">Web design</p>
                 <p class="services-body">Provide our customers with optimized user-friendly experience to increase the efficiency of digital products.</p>
-                <a class="services-btn" href="#">
-                  See Works <span><img src="./imgs/arrow-right 1.png" alt="" /></span>
-                </a>
+                <a class="services-btn" href="#"> See Works </a>
               </li>
               <li>
-                <p class="services-heading">Web design</p>
-                <p class="services-body">Provide our customers with optimized user-friendly experience to increase the efficiency of digital products.</p>
-                <a class="services-btn" href="#">
-                  See Works <span><img src="./imgs/arrow-right 1.png" alt="" /></span>
-                </a>
+                <p class="services-heading">Branding</p>
+                <p class="services-body">Understanding the business and their target customers, I’m the bridges to bring the brand closer to their clients.</p>
+                <a class="services-btn" href="#"> See Works </a>
               </li>
               <li>
-                <p class="services-heading">Web design</p>
-                <p class="services-body">Provide our customers with optimized user-friendly experience to increase the efficiency of digital products.</p>
-                <a class="services-btn" href="#">
-                  See Works <span><img src="./imgs/arrow-right 1.png" alt="" /></span>
-                </a>
+                <p class="services-heading">Photography</p>
+                <p class="services-body">While stock photography is a great option for sourcing high-quality photos, it’s important that you choose your photos thoughtfully.</p>
+                <a class="services-btn" href="#"> See Works </a>
               </li>
             </ul>
           </div>
           <div class="services-list">
             <ul>
               <li>
-                <p class="services-heading">Web design</p>
-                <p class="services-body">Provide our customers with optimized user-friendly experience to increase the efficiency of digital products.</p>
-                <a class="services-btn" href="#">
-                  See Works <span><img src="./imgs/arrow-right 1.png" alt="" /></span>
-                </a>
+                <p class="services-heading">Mobile design</p>
+                <p class="services-body">Mobile application development is a highlight that businesses are interested in at the moment and in the future.</p>
+                <a class="services-btn" href="#"> See Works </a>
               </li>
               <li>
-                <p class="services-heading">Web design</p>
-                <p class="services-body">Provide our customers with optimized user-friendly experience to increase the efficiency of digital products.</p>
-                <a class="services-btn" href="#">
-                  See Works <span><img src="./imgs/arrow-right 1.png" alt="" /></span>
-                </a>
+                <p class="services-heading">3D Modelling</p>
+                <p class="services-body">Help you translate your existing design or concept into CAD or to work with you to develop the ideal design. 3D Models great for modern digital art</p>
+                <a class="services-btn" href="#"> See Works </a>
               </li>
               <li>
-                <p class="services-heading">Web design</p>
-                <p class="services-body">Provide our customers with optimized user-friendly experience to increase the efficiency of digital products.</p>
-                <a class="services-btn" href="#">
-                  See Works <span><img src="./imgs/arrow-right 1.png" alt="" /></span>
-                </a>
+                <p class="services-heading">Video Creating</p>
+                <p class="services-body">Create high-impact social videos with our easy video maker. Use custom video templates to find the right story for your business.</p>
+                <a class="services-btn" href="#"> See Works </a>
               </li>
             </ul>
           </div>
         </div>
       </section>
     </main>
+    <section id="trusted-by">
+      <p>Trusted by</p>
+      <div>
+        <img src="./imgs/alphabet.png" alt="" />
+        <img src="./imgs/shopify-original.png" alt="" />
+        <img src="./imgs/amazon.png" alt="" />
+        <img src="./imgs/google-original.png" alt="" />
+        <img src="./imgs/netflix-primary.png" alt="" />
+      </div>
+    </section>
+
+    <section id="projects" class="container">
+      <p class="head">It’s great to always give the customer the best feed.</p>
+      <div class="project-gallery">
+        <img id="first" src="./imgs/image 12.jpg" alt="" />
+        <img id="second" src="./imgs/image 14.jpg" alt="" />
+        <img id="third" src="imgs/image 13.jpg" alt="" />
+        <img id="fourth" src="./imgs/image 15.png" alt="" />
+      </div>
+    </section>
   </body>
 </html>
